Fixed Looming Spacing Issue!!!
- Fixed the spacing issue for Professional experience and Education finally.
- Did a major code cleanup and removed un necessary Divs, allowing me to isolate the error in my code.
- -Continued spacing and code cleanup

--- a/style.css
+++ b/style.css
@@ -11,12 +11,6 @@ body {
 		float: right; 
 	}
 
-.Section-Title {
-  font-family: 'Lato', sans-serif;
-  font-size: 100px; 
-  border-bottom: 1px solid rgb(17, 12, 12);
-}
-
 h3, h4, h5, .College {
 	margin-top: 0px;
   margin-bottom: 0px;
